Fix regex pattern for the comments to also match '#' character and handle the case when the line starts with either ';' or '#'. Update test.ini.

--- a/test/test.ini
+++ b/test/test.ini
@@ -2,7 +2,9 @@ dsff_SDFsd = sdfsdfsfsfd ; section less
 
 [Section 1]
 ; comment
+# comment2
 Option 1 = value 1                     ; option 'Option 1' has value 'value 1'
+Option 2 = value 2                     # option 'Option 2' has value 'value 2'
 oPtion 1    =  \ value 2\ \ \          ; option 'oPtion 1' has value ' value 2   ', 'oPtion 1' and 'Option 1' are different
 
 [Numbers]
