--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,4 +3,11 @@ project(test_inireader)
 
 set(CMAKE_CXX_STANDARD 17)
 
+add_subdirectory(vendor/googletest)
+enable_testing()
+include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
+
 add_executable(test_inireader test.cpp)
+
+target_link_libraries(test_inireader gtest gtest_main)
+add_test(test_inireader test_inireader)
