Cleanup tests by separating them into multiple files
Separate the test suite into multiple files and make the `test ctx` variable a global variable inside `test_ctx.hpp` with the test entry point in `test_main.cpp`.

* **Add `test_ctx.hpp`**: Define `TestCtx` struct and `g_testctx` global variable.
* **Add `test_main.cpp`**: Include necessary headers, define `main` function to initialize `TestCtx` and run all tests.
* **Add `test_parse.cpp`**: Include necessary headers, define `Parse` test cases using `g_testctx`.
* **Add `test_add.cpp`**: Include necessary headers, define `Add` test cases using `g_testctx`.
* **Add `test_remove.cpp`**: Include necessary headers, define `Remove` test cases using `g_testctx`.
* **Add `test_has.cpp`**: Include necessary headers, define `Has` test cases using `g_testctx`.
* **Add `test_edit.cpp`**: Include necessary headers, define `Edit` test cases using `g_testctx`.
* **Add `test_conversion.cpp`**: Include necessary headers, define `Conversion` test cases using `g_testctx`.
* **Modify `CMakeLists.txt`**: Remove `test.cpp` from `add_executable`, add new test files to `add_executable`.
* **Delete `test.cpp`**: Remove the original single test file.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/X-rays5/inireader/tree/main?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_subdirectory(vendor/googletest)
 enable_testing()
 
-add_executable(${PROJECT_NAME} test.cpp)
+add_executable(${PROJECT_NAME} test_main.cpp test_parse.cpp test_add.cpp test_remove.cpp test_has.cpp test_edit.cpp test_conversion.cpp)
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 target_link_libraries(${PROJECT_NAME} gtest gtest_main)
